--- a/public/500.html
+++ b/public/500.html
@@ -117,7 +117,7 @@
 <body class="rails-default-error-page">
   <!-- This file lives in public/500.html -->
   <a href="/">
-    <!-- <svg id="500_Bill" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-8.5 9.5 560 250">
+    <svg id="500_Bill" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-8.5 9.5 560 250">
       <defs>
           <clipPath id="circle-mask">
               <path d="M242.7 52.3c-45.4 0-82.3 36.9-82.3 82.3s36.9 82.3 82.3 82.3S325 180 325 134.6c0-45.3-36.9-82.3-82.3-82.3zm186 0c-45.4 0-82.3 36.9-82.3 82.3s36.9 82.3 82.3 82.3S511 180 511 134.6c0-45.3-36.9-82.3-82.3-82.3z"/>
@@ -253,7 +253,7 @@
       <path id="flame-inner-right" style="-moz-transform-origin: 476.268px 97px;" class="flame-inner" fill="#FFD657" d="M492.1 97L484 77.3 460.4 97z"/>
     </g>
 
-    </svg> -->
+    </svg>
   </a>
 </body>
 </html>
