--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Lo sentimos, parece que algo salió mal (500)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   @keyframes blink-fancy{
