--- a/public/404.html
+++ b/public/404.html
@@ -80,7 +80,7 @@ anime({
 </script>
 </head>
 
-<body class="rails-default-error-page">
+<body>
   <!-- This file lives in public/404.html -->
   <a  target="_blank" href="/">
   <div class="container">
